# private-tokenised-bonds

./: .gitignore  README.md  REQUIREMENTS.md  SPEC.md
circuits/: Prover.toml
contracts/: foundry.toml
contracts/script/: PrivateBond.s.sol
contracts/src/: PrivateBond.sol
contracts/test/: PrivateBond.t.sol
custom-private-utxo/: README.md
private-l2/: README.md  SPEC.md  index.ts  package.json  test.sh
private-l2/private-bonds-contract/: codegenCache.json
private-l2/private-bonds-contract/artifacts/: PrivateBonds.ts
private-l2/private-bonds-contract/src/: main.nr
wallet/: Cargo.toml  global_note_tranche.json  wallet.json
wallet/abi/: PrivateBond.abi.json
wallet/src/: config.rs  keys.rs  main.rs  merkle.rs  notes.rs  prover.rs
