[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
num-bigint = "0.4.6"
poseidon-rs = "0.0.10"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
hex = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
alloy = "1.4.0"
sha3 = "0.10.8"
